# app/Domain/Entities/Torneo.php
@@ -9,8 +9,16 @@ class Torneo
     private string $tipo; // 'masculino' o 'femenino'
     private ?Jugador $ganador = null;
     private CentroDelPartido $centroPartido;
+    private \DateTime $fecha;
+    private string $lugar;
 
-    public function __construct(array $jugadores, string $tipo, CentroDelPartido $centroPartido)
+    public function __construct(
+        array $jugadores, 
+        string $tipo, 
+        CentroDelPartido $centroPartido, 
+        \DateTime $fecha,
+        string $lugar
+    )
     {
         if (!$this->esPotenciaDeDos(count($jugadores))) {
             throw new \InvalidArgumentException('La cantidad de jugadores debe ser una potencia de 2.');
@@ -19,6 +27,8 @@ class Torneo
         $this->jugadores = $jugadores;
         $this->tipo = $tipo;
         $this->centroPartido = $centroPartido;
+        $this->fecha = $fecha;
+        $this->lugar = $lugar;
     }
 
     public function simular(): Jugador
@@ -39,6 +49,18 @@ class Torneo
 
         $this->ganador = $ronda[0];
         return $this->ganador;
+    }
+
+    public function getTipo(): string { return $this->tipo; }
+    public function getJugadores(): array { return $this->jugadores; }
+    public function getFecha(): \DateTime
+    {
+        return $this->fecha;
+    }
+
+    public function getLugar(): string
+    {
+        return $this->lugar;
     }
 
     public function getGanador(): ?Jugador
