# routes/api.php
@@ -4,3 +4,5 @@ use Illuminate\Support\Facades\Route;
 use App\Infrastructure\Http\Controllers\TorneoController;
 
 Route::post('/torneos/simular', [TorneoController::class, 'simular']);
+
+Route::get('/torneos', [TorneoController::class, 'index']);
